--- a/src/templates/1_UZ_ChildDI_Children_in_the_child_care_system_ru.html
+++ b/src/templates/1_UZ_ChildDI_Children_in_the_child_care_system_ru.html
@@ -75,8 +75,7 @@
 
         <div class="grid grid-cols-2 gap-4 items-center mt-4">
             <div>
-                ОМР4. Должность/функции                <small class="block italic text-red-500">Укажите кейс менеджера, если данное лицо выполняет такую функцию</small>
-            </div>
+                ОМР4. Должность/функции            </div>
             <div>
                 <input type="text" id="omr4" name="omr4" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
@@ -650,19 +649,19 @@
                 </div>
                 <div class="flex items-center">
                     <input id="cm7a-4" type="radio" value="3" name="cm7a" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                    <label for="cm7a-4" class="ms-2 text-sm text-gray-900">3. Среднее специальное/профессиональное образование</label>
+                    <label for="cm7a-4" class="ms-2 text-sm text-gray-900">3. Незаконченное среднее специальное/профессиональное образование</label>
                 </div>
                 <div class="flex items-center">
                     <input id="cm7a-5" type="radio" value="4" name="cm7a" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                    <label for="cm7a-5" class="ms-2 text-sm text-gray-900">4. Незаконченное среднее специальное/профессиональное образование</label>
+                    <label for="cm7a-5" class="ms-2 text-sm text-gray-900">4. Среднее специальное/профессиональное образование</label>
                 </div>
                 <div class="flex items-center">
                     <input id="cm7a-6" type="radio" value="5" name="cm7a" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                    <label for="cm7a-6" class="ms-2 text-sm text-gray-900">5. Высшее образование</label>
+                    <label for="cm7a-6" class="ms-2 text-sm text-gray-900">5. Незаконченное высшее образование</label>
                 </div>
                 <div class="flex items-center">
                     <input id="cm7a-7" type="radio" value="6" name="cm7a" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                    <label for="cm7a-7" class="ms-2 text-sm text-gray-900">6. Незаконченное высшее образование</label>
+                    <label for="cm7a-7" class="ms-2 text-sm text-gray-900">6. Высшее образование</label>
                 </div>
                 <div class="flex items-center">
                     <input id="cm7a-9" type="radio" value="9" name="cm7a" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -688,19 +687,19 @@
                 </div>
                 <div class="flex items-center">
                     <input id="cm7b-4" type="radio" value="3" name="cm7b" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                    <label for="cm7b-4" class="ms-2 text-sm text-gray-900">3. Среднее специальное/профессиональное образование</label>
+                    <label for="cm7b-4" class="ms-2 text-sm text-gray-900">3. Незаконченное среднее специальное/профессиональное образование</label>
                 </div>
                 <div class="flex items-center">
                     <input id="cm7b-5" type="radio" value="4" name="cm7b" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                    <label for="cm7b-5" class="ms-2 text-sm text-gray-900">4. Незаконченное среднее специальное/профессиональное образование</label>
+                    <label for="cm7b-5" class="ms-2 text-sm text-gray-900">4. Среднее специальное/профессиональное образование</label>
                 </div>
                 <div class="flex items-center">
                     <input id="cm7b-6" type="radio" value="5" name="cm7b" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                    <label for="cm7b-6" class="ms-2 text-sm text-gray-900">5. Высшее образование</label>
+                    <label for="cm7b-6" class="ms-2 text-sm text-gray-900">5. Незаконченное высшее образование</label>
                 </div>
                 <div class="flex items-center">
                     <input id="cm7b-7" type="radio" value="6" name="cm7b" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                    <label for="cm7b-7" class="ms-2 text-sm text-gray-900">6. Незаконченное высшее образование</label>
+                    <label for="cm7b-7" class="ms-2 text-sm text-gray-900">6. Высшее образование</label>
                 </div>
                 <div class="flex items-center">
                     <input id="cm7b-9" type="radio" value="9" name="cm7b" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -986,7 +985,7 @@
             </div>
         </div>
         <div class="grid grid-cols-2 items-center gap-4 mt-6">
-            <div>CM10e. Пункт населения</div>
+            <div>e. Пункт населения</div>
             <div>
                 <select id="cm10e" name="cm10e" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
                     <option value="-9" class="t_choose">--- choose ---</option>
@@ -999,7 +998,7 @@
 
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
             <div>
-                СМ11 Текущее место жительство матери.            </div>
+                СМ11. Текущее место жительство матери.            </div>
             <div>
 
                 <div class="mb-2">а. Проживает ли она ...?</div>
@@ -1455,19 +1454,19 @@
                 </div>
                 <div class="flex items-center">
                     <input id="ct7a-4" type="radio" value="3" name="ct7a" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                    <label for="ct7a-4" class="ms-2 text-sm text-gray-900">3. Среднее специальное/профессиональное образование</label>
+                    <label for="ct7a-4" class="ms-2 text-sm text-gray-900">3. Незаконченное cреднее специальное/профессиональное образование</label>
                 </div>
                 <div class="flex items-center">
                     <input id="ct7a-5" type="radio" value="4" name="ct7a" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                    <label for="ct7a-5" class="ms-2 text-sm text-gray-900">4. Незаконченное cреднее специальное/профессиональное образование</label>
+                    <label for="ct7a-5" class="ms-2 text-sm text-gray-900">4. Среднее специальное/профессиональное образование</label>
                 </div>
                 <div class="flex items-center">
                     <input id="ct7a-6" type="radio" value="5" name="ct7a" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                    <label for="ct7a-6" class="ms-2 text-sm text-gray-900">5. Высшее образование</label>
+                    <label for="ct7a-6" class="ms-2 text-sm text-gray-900">5. Незаконченное высшее образование</label>
                 </div>
                 <div class="flex items-center">
                     <input id="ct7a-7" type="radio" value="6" name="ct7a" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                    <label for="ct7a-7" class="ms-2 text-sm text-gray-900">6. Незаконченное высшее образование</label>
+                    <label for="ct7a-7" class="ms-2 text-sm text-gray-900">6. Высшее образование</label>
                 </div>
                 <div class="flex items-center">
                     <input id="ct7a-9" type="radio" value="9" name="ct7a" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -1493,19 +1492,19 @@
                 </div>
                 <div class="flex items-center">
                     <input id="ct7b-4" type="radio" value="3" name="ct7b" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                    <label for="ct7b-4" class="ms-2 text-sm text-gray-900">3. Среднее специальное/профессиональное образование</label>
+                    <label for="ct7b-4" class="ms-2 text-sm text-gray-900">3. Незаконченное cреднее специальное/профессиональное образование</label>
                 </div>
                 <div class="flex items-center">
                     <input id="ct7b-5" type="radio" value="4" name="ct7b" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                    <label for="ct7b-5" class="ms-2 text-sm text-gray-900">4. Незаконченное cреднее специальное/профессиональное образование</label>
+                    <label for="ct7b-5" class="ms-2 text-sm text-gray-900">4. Среднее специальное/профессиональное образование</label>
                 </div>
                 <div class="flex items-center">
                     <input id="ct7b-6" type="radio" value="5" name="ct7b" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                    <label for="ct7b-6" class="ms-2 text-sm text-gray-900">5. Высшее образование</label>
+                    <label for="ct7b-6" class="ms-2 text-sm text-gray-900">5. Незаконченное высшее образование</label>
                 </div>
                 <div class="flex items-center">
                     <input id="ct7b-7" type="radio" value="6" name="ct7b" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                    <label for="ct7b-7" class="ms-2 text-sm text-gray-900">6. Незаконченное высшее образование</label>
+                    <label for="ct7b-7" class="ms-2 text-sm text-gray-900">6. Высшее образование</label>
                 </div>
                 <div class="flex items-center">
                     <input id="ct7b-9" type="radio" value="9" name="ct7b" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -1918,8 +1917,7 @@
                 <input type="text" id="cg1c" name="cg1c" class="bg-white disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" />
             </div>
         </div>
-        <small class="block italic text-red-500">Если человек является родственником, используйте код 1 в CG1a</small>
-
+        
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
             <div>CG1d. Родственные связи: </div>
             <div class="flex flex-col gap-2">
@@ -2222,19 +2220,19 @@
                 </div>
                 <div class="flex items-center">
                     <input id="cg7a-4" type="radio" value="3" name="cg7a" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                    <label for="cg7a-4" class="ms-2 text-sm text-gray-900">3. Среднее специальное/профессиональное образование</label>
+                    <label for="cg7a-4" class="ms-2 text-sm text-gray-900">3. Незаконченное специальное / профессиональное образование</label>
                 </div>
                 <div class="flex items-center">
                     <input id="cg7a-5" type="radio" value="4" name="cg7a" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                    <label for="cg7a-5" class="ms-2 text-sm text-gray-900">4.Незаконченное специальное / профессиональное образование</label>
+                    <label for="cg7a-5" class="ms-2 text-sm text-gray-900">4. Среднее специальное/профессиональное образование</label>
                 </div>
                 <div class="flex items-center">
                     <input id="cg7a-6" type="radio" value="5" name="cg7a" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                    <label for="cg7a-6" class="ms-2 text-sm text-gray-900">5. Высшее образование</label>
+                    <label for="cg7a-6" class="ms-2 text-sm text-gray-900">5. Незаконченное высшее образование</label>
                 </div>
                 <div class="flex items-center">
                     <input id="cg7a-7" type="radio" value="6" name="cg7a" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                    <label for="cg7a-7" class="ms-2 text-sm text-gray-900">6. Незаконченное высшее образование</label>
+                    <label for="cg7a-7" class="ms-2 text-sm text-gray-900">6. Высшее образование</label>
                 </div>
                 <div class="flex items-center">
                     <input id="cg7a-9" type="radio" value="9" name="cg7a" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -2260,19 +2258,19 @@
                 </div>
                 <div class="flex items-center">
                     <input id="cg7b-4" type="radio" value="3" name="cg7b" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                    <label for="cg7b-4" class="ms-2 text-sm text-gray-900">3. Среднее специальное/профессиональное образование</label>
+                    <label for="cg7b-4" class="ms-2 text-sm text-gray-900">3. Незаконченное специальное / профессиональное образование</label>
                 </div>
                 <div class="flex items-center">
                     <input id="cg7b-5" type="radio" value="4" name="cg7b" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                    <label for="cg7b-5" class="ms-2 text-sm text-gray-900">4.Незаконченное специальное / профессиональное образование</label>
+                    <label for="cg7b-5" class="ms-2 text-sm text-gray-900">4. Среднее специальное/профессиональное образование</label>
                 </div>
                 <div class="flex items-center">
                     <input id="cg7b-6" type="radio" value="5" name="cg7b" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                    <label for="cg7b-6" class="ms-2 text-sm text-gray-900">5. Высшее образование</label>
+                    <label for="cg7b-6" class="ms-2 text-sm text-gray-900">5. Незаконченное высшее образование</label>
                 </div>
                 <div class="flex items-center">
                     <input id="cg7b-7" type="radio" value="6" name="cg7b" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                    <label for="cg7b-7" class="ms-2 text-sm text-gray-900">6. Незаконченное высшее образование</label>
+                    <label for="cg7b-7" class="ms-2 text-sm text-gray-900">6. Высшее образование</label>
                 </div>
                 <div class="flex items-center">
                     <input id="cg7b-9" type="radio" value="9" name="cg7b" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -6260,20 +6258,25 @@
             </div>
         </div>
 
-        <div class="grid grid-cols-2 gap-4 items-center mt-10">
-            <div>
-                SK3. Есть ли у ребенка братья и/или сестры, находящиеся в системе опеки? Если да, то сколько братьев и сестер?            </div>
+        <div class="grid grid-cols-2 gap-4 mt-10">
+            <div> SK3. Есть ли у ребенка братья и/или сестры, находящиеся в системе опеки? Если да, то сколько братьев и сестер? </div>
             <div class="col-span-1 flex flex-col gap-2">
                 <div class="flex items-center">
                     <input id="sk3-1" type="radio" value="1" name="sk3" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                    <label for="sk3-1" class="ms-2 text-sm text-gray-900">1. Да, братья</label>
+                    <label for="sk3-1" class="ms-2 text-sm text-gray-900">1. Да</label>
                 </div>
-                <input type="text" id="sk3_1" name="sk3_1" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
-                <div class="flex items-center">
-                    <input id="sk3-2" type="radio" value="2" name="sk3" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                    <label for="sk3-2" class="ms-2 text-sm text-gray-900">2. Да, сестры</label>
+                <div class="grid grid-cols-2 gap-4 items-center">
+                    <div class="text-sm text-gray-700 text-center">Братья</div>
+                    <div class="text-sm text-gray-700 text-center">Cестры</div>
                 </div>
-                <input type="text" id="sk3_2" name="sk3_2" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                <div class="grid grid-cols-2 gap-4 items-center">
+                    <div>
+                        <input type="text" id="sk3_1" name="sk3_1" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                    </div>
+                    <div>
+                        <input type="text" id="sk3_2" name="sk3_2" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                    </div>
+                </div>
                 <div class="flex items-center">
                     <input id="sk3-3" type="radio" value="3" name="sk3" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
                     <label for="sk3-3" class="ms-2 text-sm text-gray-900">3. Ни братья, ни сестры</label>
